--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
+    "strictNullChecks": true,
     "module": "ESNext",
     "target": "es6",
     "allowJs": true,
