--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@types/aes-js": "^3.1.1",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^14.14.37",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.32.0",
     "obsidian": "^0.12.0",
     "rollup": "^2.32.1",
     "tslib": "^2.2.0",
