--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,14 @@
         "semi": [
             "error",
             "always"
+        ],
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "warn",
+            {
+                "varsIgnorePattern": "^_",
+                "argsIgnorePattern": "^_"
+            }
         ]
     }
 }
