--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production"
+    "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +17,15 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/aes-js": "^3.1.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^27.0.1",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "eslint": "^7.32.0",
+    "jest": "^27.0.6",
     "obsidian": "^0.12.0",
     "rollup": "^2.32.1",
+    "ts-jest": "^27.0.4",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   },
