--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-# Intellij
-*.iml
-.idea
-
-# npm
 node_modules
-package-lock.json
-
-# build
+.vscode
+crypto.json
+crypto-new.json
 main.js
-*.js.map
-
-# obsidian
 data.json
